Adding local copy of Java8 implementation of Base64 encode/decode. javax.xml.bind.DatatypeConverter is not available in Android.