@@ -3,6 +3,8 @@
 
 package com.microsoft.azure.iothub.auth;
 
+import com.microsoft.azure.util.Base64;
+
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.Charset;
@@ -12,7 +14,6 @@ import java.security.NoSuchAlgorithmException;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
-import javax.xml.bind.DatatypeConverter;
 
 /** Builds the authorization signature as a composition of functions. */
 public final class SignatureHelper
@@ -52,7 +53,9 @@ public final class SignatureHelper
     public static byte[] decodeDeviceKeyBase64(String deviceKey)
     {
         // Codes_SRS_SIGNATUREHELPER_11_003: [The function shall decode the device key using Base64.]
-        return DatatypeConverter.parseBase64Binary(deviceKey);
+        // TODO:(pv) javax.xml.bind.DatatypeConverter is not available in Android
+        //return DatatypeConverter.parseBase64Binary(deviceKey);
+        return Base64.getDecoder().decode(deviceKey);
     }
 
     /**
@@ -102,8 +105,9 @@ public final class SignatureHelper
     public static byte[] encodeSignatureBase64(byte[] sig)
     {
         // Codes_SRS_SIGNATUREHELPER_11_006: [The function shall encode the signature using Base64.]
-        return DatatypeConverter.printBase64Binary(sig)
-                .getBytes(SIGNATURE_CHARSET);
+        // TODO:(pv) javax.xml.bind.DatatypeConverter is not available in Android
+        //return DatatypeConverter.printBase64Binary(sig).getBytes(SIGNATURE_CHARSET);
+        return Base64.getEncoder().encode(sig);
     }
 
     /**
